# xub

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
docs/source/: LICENSE.md  conf.py  index.rst
docs/source/backlog/: index.rst
docs/source/history/: index.rst
docs/source/history/0.1/: 0.1.0.rst  _changes-0.1.0.rst
src/xub/: __init__.py
