[project]
name = "xub"
version = "0.1.0"
description = "Setting up a Linux-based workstation"
readme = "README.md"
authors = [
    { name = "Medardo Antonio Rodriguez" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
xub = "xub:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]
lint = [
    "isort>=7.0.0",
    "ruff>=0.14.10",
]
test = [
    "hypothesis>=6.148.8",
    "pytest>=9.0.2",
]
