[project]
name = "xub"
version = "0.1.0"
description = "Setting up a Linux-based workstation"
readme = "README.md"
authors = [
    { name = "Medardo Antonio Rodriguez" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
xub = "xub:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]
lint = [
    "isort>=7.0.0",
    "ruff>=0.14.10",
]
test = [
    "hypothesis>=6.148.8",
    "pytest>=9.0.2",
]
tooling = [
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]
dev = [
    { include-group="test" },
    { include-group="lint" },
    { include-group="docs" },
    { include-group="tooling" },
]

[tool.uv]
default-groups = ["dev"]

[tool.pydocstyle]
add-ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["xotl/tools"]
skip_gitignore = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
  "E501", # line-length is left to the formatter
  "E731", # do not assign a `lambda` expression, use a `def` (we use it a lot)
]
preview = true

[tool.ruff.format]
quote-style = "preserve"
preview = true
exclude = ["src/<project-dir>/_version.py"]
